modify a1 parts 2,3 - upgrade to 2019 version

--- a/assignment1/features.ipynb
+++ b/assignment1/features.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Image features exercise\n",
     "*Complete and hand in this completed worksheet (including its outputs and any supporting code outside of the worksheet) with your assignment submission. For more details see the [assignments page](http://vision.stanford.edu/teaching/cs231n/assignments.html) on the course website.*\n",
@@ -15,7 +19,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -23,7 +31,6 @@
     "from cs231n.data_utils import load_CIFAR10\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from __future__ import print_function\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -38,7 +45,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "## Load data\n",
     "Similar to previous exercises, we will load CIFAR-10 data from disk."
@@ -47,7 +58,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "from cs231n.features import color_histogram_hsv, hog_feature\n",
@@ -55,6 +70,15 @@
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000):\n",
     "    # Load the raw CIFAR-10 data\n",
     "    cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "\n",
+    "    # Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
+    "    try:\n",
+    "       del X_train, y_train\n",
+    "       del X_test, y_test\n",
+    "       print('Clear previously loaded data.')\n",
+    "    except:\n",
+    "       pass\n",
+    "\n",
     "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "    \n",
     "    # Subsample the data\n",
@@ -75,7 +99,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "## Extract Features\n",
     "For each image we will compute a Histogram of Oriented\n",
@@ -87,7 +115,7 @@
     "color information, and the color histogram represents the color of the input\n",
     "image while ignoring texture. As a result, we expect that using both together\n",
     "ought to work better than using either alone. Verifying this assumption would\n",
-    "be a good thing to try for the bonus section.\n",
+    "be a good thing to try for your own interest.\n",
     "\n",
     "The `hog_feature` and `color_histogram_hsv` functions both operate on a single\n",
     "image and return a feature vector for that image. The extract_features\n",
@@ -99,7 +127,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "from cs231n.features import *\n",
@@ -140,7 +173,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Use the validation set to tune the learning rate and regularization strength\n",
@@ -154,7 +191,6 @@
     "best_val = -1\n",
     "best_svm = None\n",
     "\n",
-    "pass\n",
     "################################################################################\n",
     "# TODO:                                                                        #\n",
     "# Use the validation set to set the learning rate and regularization strength. #\n",
@@ -163,10 +199,9 @@
     "# with different numbers of bins in the color histogram. If you are careful    #\n",
     "# you should be able to get accuracy of near 0.44 on the validation set.       #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                              END OF YOUR CODE                                #\n",
-    "################################################################################\n",
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "# Print out results.\n",
     "for lr, reg in sorted(results):\n",
@@ -217,10 +252,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
     "### Inline question 1:\n",
-    "Describe the misclassification results that you see. Do they make sense?"
+    "Describe the misclassification results that you see. Do they make sense?\n",
+    "\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -236,16 +280,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
+    "# Preprocessing: Remove the bias dimension\n",
+    "# Make sure to run this cell only ONCE\n",
+    "print(X_train_feats.shape)\n",
+    "X_train_feats = X_train_feats[:, :-1]\n",
+    "X_val_feats = X_val_feats[:, :-1]\n",
+    "X_test_feats = X_test_feats[:, :-1]\n",
+    "\n",
     "print(X_train_feats.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "from cs231n.classifiers.neural_net import TwoLayerNet\n",
@@ -262,10 +321,9 @@
     "# cross-validate various parameters as in previous sections. Store your best   #\n",
     "# model in the best_net variable.                                              #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                              END OF YOUR CODE                                #\n",
-    "################################################################################"
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -274,30 +332,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run your neural net classifier on the test set. You should be able to\n",
-    "# get more than 55% accuracy.\n",
+    "# Run your best neural net classifier on the test set. You should be able\n",
+    "# to get more than 55% accuracy.\n",
     "\n",
-    "test_acc = (net.predict(X_test_feats) == y_test).mean()\n",
+    "test_acc = (best_net.predict(X_test_feats) == y_test).mean()\n",
     "print(test_acc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: Design your own features!\n",
-    "\n",
-    "You have seen that simple image features can improve classification performance. So far we have tried HOG and color histograms, but other types of features may be able to achieve even better classification performance.\n",
-    "\n",
-    "For bonus points, design and implement a new type of feature and use it for image classification on CIFAR-10. Explain how your feature works and why you expect it to be useful for image classification. Implement it in this notebook, cross-validate any hyperparameters, and compare its performance to the HOG + Color histogram baseline."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: Do something extra!\n",
-    "Use the material and code we have presented in this assignment to do something interesting. Was there another question we should have asked? Did any cool ideas pop into your head as you were working on the assignment? This is your chance to show off!"
    ]
   }
  ],
