--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Softmax exercise\n",
     "\n",
@@ -21,15 +25,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
     "from cs231n.data_utils import load_CIFAR10\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from __future__ import print_function\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -45,7 +51,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
@@ -56,6 +66,15 @@
     "    \"\"\"\n",
     "    # Load the raw CIFAR-10 data\n",
     "    cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "    \n",
+    "    # Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
+    "    try:\n",
+    "       del X_train, y_train\n",
+    "       del X_test, y_test\n",
+    "       print('Clear previously loaded data.')\n",
+    "    except:\n",
+    "       pass\n",
+    "\n",
     "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "    \n",
     "    # subsample the data\n",
@@ -139,12 +158,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "## Inline Question 1:\n",
+    "**Inline Question 1**\n",
+    "\n",
     "Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
     "\n",
-    "**Your answer:** *Fill this in*\n"
+    "$\\color{blue}{\\textit Your Answer:}$ *Fill this in* \n",
+    "\n"
    ]
   },
   {
@@ -200,7 +225,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
@@ -220,10 +249,9 @@
     "# This should be identical to the validation that you did for the SVM; save    #\n",
     "# the best trained softmax classifer in best_softmax.                          #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                              END OF YOUR CODE                                #\n",
-    "################################################################################\n",
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    \n",
     "# Print out results.\n",
     "for lr, reg in sorted(results):\n",
@@ -245,6 +273,25 @@
     "y_test_pred = best_softmax.predict(X_test)\n",
     "test_accuracy = np.mean(y_test == y_test_pred)\n",
     "print('softmax on raw pixels final test set accuracy: %f' % (test_accuracy, ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
+   "source": [
+    "**Inline Question 2** - *True or False*\n",
+    "\n",
+    "Suppose the overall training loss is defined as the sum of the per-datapoint loss over all training examples. It is possible to add a new datapoint to a training set that would leave the SVM loss unchanged, but this is not the case with the Softmax classifier loss.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$\n",
+    "\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$\n",
+    "\n"
    ]
   },
   {
