--- a/assignment1/softmax_solution_yorko.ipynb
+++ b/assignment1/softmax_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A1, part 3](http://cs231n.github.io/assignments2018/assignment1/). Softmax exercise\n",
+    "# <center> cs231n 2019. [A1, part 3](http://cs231n.github.io/assignments2018/assignment1/). Softmax exercise\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**"
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "### Inline Question #1\n",
     "Why do we expect our loss to be close to -log(0.1)? Explain briefly.\n",
     "\n",
-    "**Your answer:** *There are ten classes here, so if the scores are random and mostly equal, we expect the ratio in the softmax formula to be $\\approx$ 0.1.*\n"
+    "$\\color{blue}{\\textit Your Answer:}$ *There are ten classes here, so if the scores are random and mostly equal, we expect the ratio in the softmax formula to be $\\approx$ 0.1.*\n"
    ]
   },
   {
@@ -421,6 +421,20 @@
     "y_test_pred = best_softmax_clf.predict(X_test)\n",
     "test_accuracy = np.mean(y_test == y_test_pred)\n",
     "print('Softmax on raw pixels final test set accuracy: %f' % (test_accuracy, ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inline Question 2** - *True or False*\n",
+    "\n",
+    "Suppose the overall training loss is defined as the sum of the per-datapoint loss over all training examples. It is possible to add a new datapoint to a training set that would leave the SVM loss unchanged, but this is not the case with the Softmax classifier loss.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *True*\n",
+    "\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$ Hinge (or SVM) loss can be strictly equal to zero for data points with big enough margin. But logarithmic loss (Softmax classifier loss) is always positive.  \n"
    ]
   },
   {
