--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Multiclass Support Vector Machine exercise\n",
     "\n",
@@ -21,17 +25,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Run some setup code for this notebook.\n",
-    "\n",
     "import random\n",
     "import numpy as np\n",
     "from cs231n.data_utils import load_CIFAR10\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from __future__ import print_function\n",
     "\n",
     "# This is a bit of magic to make matplotlib figures appear inline in the\n",
     "# notebook rather than in a new window.\n",
@@ -48,7 +53,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "## CIFAR-10 Data Loading and Preprocessing"
    ]
@@ -56,11 +65,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Load the raw CIFAR-10 data.\n",
     "cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "\n",
+    "# Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
+    "try:\n",
+    "   del X_train, y_train\n",
+    "   del X_test, y_test\n",
+    "   print('Clear previously loaded data.')\n",
+    "except:\n",
+    "   pass\n",
+    "\n",
     "X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "\n",
     "# As a sanity check, we print out the size of the training and test data.\n",
@@ -73,7 +95,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Visualize some examples from the dataset.\n",
@@ -97,7 +123,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Split the data into train, val, and test sets. In addition we will\n",
@@ -143,7 +173,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Preprocessing: reshape the image data into rows\n",
@@ -162,7 +196,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Preprocessing: subtract the mean image\n",
@@ -171,28 +209,14 @@
     "print(mean_image[:10]) # print a few of the elements\n",
     "plt.figure(figsize=(4,4))\n",
     "plt.imshow(mean_image.reshape((32,32,3)).astype('uint8')) # visualize the mean image\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "\n",
     "# second: subtract the mean image from train and test data\n",
     "X_train -= mean_image\n",
     "X_val -= mean_image\n",
     "X_test -= mean_image\n",
-    "X_dev -= mean_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_dev -= mean_image\n",
+    "\n",
     "# third: append the bias dimension of ones (i.e. bias trick) so that our SVM\n",
     "# only has to worry about optimizing a single weight matrix W.\n",
     "X_train = np.hstack([X_train, np.ones((X_train.shape[0], 1))])\n",
@@ -268,12 +292,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "### Inline Question 1:\n",
-    "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
+    "**Inline Question 1**\n",
     "\n",
-    "**Your Answer:** *fill this in.*"
+    "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? How would change the margin affect of the frequency of this happening? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*  \n"
    ]
   },
   {
@@ -384,13 +413,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
     "# rates and regularization strengths; if you are careful you should be able to\n",
-    "# get a classification accuracy of about 0.4 on the validation set.\n",
+    "# get a classification accuracy of about 0.39 on the validation set.\n",
+    "\n",
+    "#Note: you may see runtime/overflow warnings during hyper-parameter search. \n",
+    "# This may be caused by extreme values, and is not a bug.\n",
+    "\n",
     "learning_rates = [1e-7, 5e-5]\n",
     "regularization_strengths = [2.5e4, 5e4]\n",
     "\n",
@@ -416,10 +453,9 @@
     "# confident that your validation code works, you should rerun the validation   #\n",
     "# code with a larger value for num_iters.                                      #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                              END OF YOUR CODE                                #\n",
-    "################################################################################\n",
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    \n",
     "# Print out results.\n",
     "for lr, reg in sorted(results):\n",
@@ -433,7 +469,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Visualize the cross-validation results\n",
@@ -445,7 +485,7 @@
     "marker_size = 100\n",
     "colors = [results[x][0] for x in results]\n",
     "plt.subplot(2, 1, 1)\n",
-    "plt.scatter(x_scatter, y_scatter, marker_size, c=colors)\n",
+    "plt.scatter(x_scatter, y_scatter, marker_size, c=colors, cmap=plt.cm.coolwarm)\n",
     "plt.colorbar()\n",
     "plt.xlabel('log learning rate')\n",
     "plt.ylabel('log regularization strength')\n",
@@ -454,7 +494,7 @@
     "# plot validation accuracy\n",
     "colors = [results[x][1] for x in results] # default size of markers is 20\n",
     "plt.subplot(2, 1, 2)\n",
-    "plt.scatter(x_scatter, y_scatter, marker_size, c=colors)\n",
+    "plt.scatter(x_scatter, y_scatter, marker_size, c=colors, cmap=plt.cm.coolwarm)\n",
     "plt.colorbar()\n",
     "plt.xlabel('log learning rate')\n",
     "plt.ylabel('log regularization strength')\n",
@@ -477,7 +517,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Visualize the learned weights for each class.\n",
@@ -499,12 +543,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "### Inline question 2:\n",
+    "**Inline question 2**\n",
+    "\n",
     "Describe what your visualized SVM weights look like, and offer a brief explanation for why they look they way that they do.\n",
     "\n",
-    "**Your answer:** *fill this in*"
+    "$\\color{blue}{\\textit Your Answer:}$ *fill this in*  \n"
    ]
   }
  ],
