--- a/assignment1/svm_solution_yorko.ipynb
+++ b/assignment1/svm_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A1, part 2](http://cs231n.github.io/assignments2018/assignment1/). Multiclass Support Vector Machine exercise\n",
+    "# <center> cs231n 2019. [A1, part 2](http://cs231n.github.io/assignments2018/assignment1/). Multiclass Support Vector Machine exercise\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**\n",
     "\n",
     "*Complete and hand in this completed worksheet (including its outputs and any supporting code outside of the worksheet) with your assignment submission. For more details see the [assignments page](http://vision.stanford.edu/teaching/cs231n/assignments.html) on the course website.*\n",
     "\n",
@@ -387,7 +387,7 @@
     "### Inline Question #1\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** *The problem with gradient checking occurs when the margin is strictly equal to zero or is close to zero (is less than step `h` in gradient checking formula). For 2-class problem this is the case when the difference between scores for the first and second classes is equal to one. This is actually not a big deal, the weights can still be updated in such case.*"
+    "$\\color{blue}{\\textit Your Answer:}$ *The problem with gradient checking occurs when the margin is strictly equal to zero or is close to zero (is less than step `h` in gradient checking formula). For 2-class problem this is the case when the difference between scores for the first and second classes is equal to one. This is actually not a big deal, the weights can still be updated in such case.*"
    ]
   },
   {
@@ -997,7 +997,7 @@
     "### Inline question #2\n",
     "Describe what your visualized SVM weights look like, and offer a brief explanation for why they look the way that they do.\n",
     "\n",
-    "**Your answer:** *The weights serve as a sort of templates for each class, for new image the cross-product between this image pixels and weights (templates) will show how similar these matrices are, i.e. to what extent the image matches the corresponding template. As we can see, if visualized, the weight matrices convey some general features of the representatives of each class.* "
+    "$\\color{blue}{\\textit Your Answer:}$ *The weights serve as a sort of templates for each class, for new image the cross-product between this image pixels and weights (templates) will show how similar these matrices are, i.e. to what extent the image matches the corresponding template. As we can see, if visualized, the weight matrices convey some general features of the representatives of each class.* "
    ]
   }
  ],
