--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Implementing a Neural Network\n",
     "In this exercise we will develop a neural network with fully-connected layers to perform classification, and test it out on the CIFAR-10 dataset."
@@ -11,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# A bit of setup\n",
@@ -20,8 +28,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from cs231n.classifiers.neural_net import TwoLayerNet\n",
-    "\n",
-    "from __future__ import print_function\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -40,7 +46,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "We will use the class `TwoLayerNet` in the file `cs231n/classifiers/neural_net.py` to represent instances of our network. The network parameters are stored in the instance variable `self.params` where keys are string parameter names and values are numpy arrays. Below, we initialize toy data and a toy model that we will use to develop your implementation."
    ]
@@ -48,7 +58,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Create a small net and some toy data to check your implementations.\n",
@@ -113,7 +127,7 @@
    "metadata": {},
    "source": [
     "# Forward pass: compute loss\n",
-    "In the same function, implement the second part that computes the data and regularizaion loss."
+    "In the same function, implement the second part that computes the data and regularization loss."
    ]
   },
   {
@@ -166,7 +180,7 @@
     "# Train the network\n",
     "To train the network we will use stochastic gradient descent (SGD), similar to the SVM and Softmax classifiers. Look at the function `TwoLayerNet.train` and fill in the missing sections to implement the training procedure. This should be very similar to the training procedure you used for the SVM and Softmax classifiers. You will also have to implement `TwoLayerNet.predict`, as the training process periodically performs prediction to keep track of accuracy over time while the network trains.\n",
     "\n",
-    "Once you have implemented the method, run the code below to train a two-layer network on toy data. You should achieve a training loss less than 0.2."
+    "Once you have implemented the method, run the code below to train a two-layer network on toy data. You should achieve a training loss less than 0.02."
    ]
   },
   {
@@ -201,7 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "from cs231n.data_utils import load_CIFAR10\n",
@@ -214,6 +232,15 @@
     "    \"\"\"\n",
     "    # Load the raw CIFAR-10 data\n",
     "    cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "    \n",
+    "    # Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
+    "    try:\n",
+    "       del X_train, y_train\n",
+    "       del X_test, y_test\n",
+    "       print('Clear previously loaded data.')\n",
+    "    except:\n",
+    "       pass\n",
+    "\n",
     "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "        \n",
     "    # Subsample the data\n",
@@ -256,13 +283,17 @@
    "metadata": {},
    "source": [
     "# Train a network\n",
-    "To train our network we will use SGD with momentum. In addition, we will adjust the learning rate with an exponential learning rate schedule as optimization proceeds; after each epoch, we will reduce the learning rate by multiplying it by a decay rate."
+    "To train our network we will use SGD. In addition, we will adjust the learning rate with an exponential learning rate schedule as optimization proceeds; after each epoch, we will reduce the learning rate by multiplying it by a decay rate."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "input_size = 32 * 32 * 3\n",
@@ -278,8 +309,7 @@
     "\n",
     "# Predict on the validation set\n",
     "val_acc = (net.predict(X_val) == y_val).mean()\n",
-    "print('Validation accuracy: ', val_acc)\n",
-    "\n"
+    "print('Validation accuracy: ', val_acc)\n"
    ]
   },
   {
@@ -312,7 +342,8 @@
     "plt.plot(stats['val_acc_history'], label='val')\n",
     "plt.title('Classification accuracy history')\n",
     "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Clasification accuracy')\n",
+    "plt.ylabel('Classification accuracy')\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -348,13 +379,30 @@
     "\n",
     "**Approximate results**. You should be aim to achieve a classification accuracy of greater than 48% on the validation set. Our best network gets over 52% on the validation set.\n",
     "\n",
-    "**Experiment**: You goal in this exercise is to get as good of a result on CIFAR-10 as you can, with a fully-connected Neural Network. For every 1% above 52% on the Test set we will award you with one extra bonus point. Feel free implement your own techniques (e.g. PCA to reduce dimensionality, or adding dropout, or adding features to the solver, etc.)."
+    "**Experiment**: You goal in this exercise is to get as good of a result on CIFAR-10 as you can (52% could serve as a reference), with a fully-connected Neural Network. Feel free implement your own techniques (e.g. PCA to reduce dimensionality, or adding dropout, or adding features to the solver, etc.)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
+   "source": [
+    "**Explain your hyperparameter tuning process below.**\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "best_net = None # store the best model into this \n",
@@ -371,10 +419,9 @@
     "# write code to sweep through possible combinations of hyperparameters          #\n",
     "# automatically like we did on the previous exercises.                          #\n",
     "#################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "#################################################################################\n",
-    "#                               END OF YOUR CODE                                #\n",
-    "#################################################################################"
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n"
    ]
   },
   {
@@ -392,9 +439,7 @@
    "metadata": {},
    "source": [
     "# Run on the test set\n",
-    "When you are done experimenting, you should evaluate your final trained network on the test set; you should get above 48%.\n",
-    "\n",
-    "**We will give you extra bonus point for every 1% of accuracy above 52%.**"
+    "When you are done experimenting, you should evaluate your final trained network on the test set; you should get above 48%."
    ]
   },
   {
@@ -405,6 +450,29 @@
    "source": [
     "test_acc = (best_net.predict(X_test) == y_test).mean()\n",
     "print('Test accuracy: ', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
+   "source": [
+    "**Inline Question**\n",
+    "\n",
+    "Now that you have trained a Neural Network classifier, you may find that your testing accuracy is much lower than the training accuracy. In what ways can we decrease this gap? Select all that apply.\n",
+    "\n",
+    "1. Train on a larger dataset.\n",
+    "2. Add more hidden units.\n",
+    "3. Increase the regularization strength.\n",
+    "4. None of the above.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$\n",
+    "\n"
    ]
   }
  ],
